pkgincludedir=$(prefix)/include/fwdpp/internal

pkginclude_HEADERS=mutation_internal.hpp \
	rec_gamete_updater.hpp \
	recombination_common.hpp \
	gsl_discrete.hpp \
	multilocus_rec.hpp \
	IOhelp.hpp \
	ms_sampling.hpp \
	diploid_fitness_dispatch.hpp \
	gamete_lookup_table.hpp \
	gamete_cleaner.hpp

