pkgincludedir=$(prefix)/include/fwdpp/internal

pkginclude_HEADERS=mutation_internal.hpp \
	rec_gamete_updater.hpp \
	recombination_common.hpp \
	gsl_discrete.hpp \
	multilocus_rec.hpp \
	IOhelp.hpp \
	ms_sampling.hpp \
	gamete_cleaner.hpp \
	recycling.hpp \
	sample_diploid_helpers.hpp \
	type_traits.hpp \
	demography_details.hpp \
	void_t.hpp

