pkgincludedir=$(prefix)/include/fwdpp/internal

pkginclude_HEADERS=mutation_internal.hpp \
	rec_gamete_updater.hpp \
	recombination_common.hpp \
	gsl_discrete.hpp \
	multilocus_rec.hpp \
	ms_sampling.hpp \
	gamete_cleaner.hpp \
	sample_diploid_helpers.hpp \
	type_traits.hpp \
	data_matrix_details.hpp \
	sampling_functions_details.hpp \
	debug_details.hpp \
	void_t.hpp \
	util.hpp

