pkgincludedir=$(prefix)/include/fwdpp/sugar

SUBDIRS=gsl poptypes sampling

pkginclude_HEADERS=sugar.hpp serialization.hpp singlepop.hpp metapop.hpp multiloc.hpp GSLrng_t.hpp popgenmut.hpp infsites.hpp sampling.hpp generalmut.hpp demography.hpp add_mutation.hpp change_neutral.hpp matrix.hpp matrix_details.hpp
