pkgincludedir=$(prefix)/include/fwdpp/ts

SUBDIRS=simplification

pkginclude_HEADERS= definitions.hpp \
			node.hpp \
			edge.hpp \
			site.hpp \
			table_collection.hpp \
			table_simplifier.hpp \
			get_parent_ids.hpp \
			generate_data_matrix.hpp \
			indexed_edge.hpp \
			marginal_tree.hpp \
			tree_visitor.hpp \
			mark_multiple_roots.hpp \
			mutate_tables.hpp \
			count_mutations.hpp \
			mutation_record.hpp \
			remove_fixations_from_gametes.hpp \
			recycling.hpp \
			serialization_version.hpp \
			serialization.hpp \
			marginal_tree_functions.hpp \
			decapitate.hpp \
			exceptions.hpp \
			mutation_tools.hpp \
			table_types.hpp \
			visit_sites.hpp \
			site_visitor.hpp


