pkgincludedir=$(prefix)/include/fwdpp/ts

SUBDIRS=simplification recording detail recording marginal_tree_functions

pkginclude_HEADERS= definitions.hpp \
			node.hpp \
			edge.hpp \
			site.hpp \
			table_collection.hpp \
			table_collection_functions.hpp \
			std_table_collection.hpp \
			table_simplifier.hpp \
			make_simplifier_state.hpp \
			simplify_tables.hpp \
			simplify_tables_output.hpp \
			simplification_flags.hpp \
			get_parent_ids.hpp \
			generate_offspring.hpp \
			generate_data_matrix.hpp \
			marginal_tree.hpp \
			tree_visitor.hpp \
			mark_multiple_roots.hpp \
			mutate_tables.hpp \
			count_mutations.hpp \
			mutation_record.hpp \
			remove_fixations_from_gametes.hpp \
			recycling.hpp \
			serialization_version.hpp \
			serialization.hpp \
			marginal_tree_functions.hpp \
			decapitate.hpp \
			exceptions.hpp \
			mutation_tools.hpp \
			visit_sites.hpp \
			site_visitor.hpp \
			recording.hpp


